INTERNAL-16; fix responsiveness

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
@@ -24,7 +24,7 @@ use Magento\Framework\Escaper;
                 </div>
                 <div>
                     <a href="<?= $escaper->escapeUrl($block->getAddressEditUrl($customerDefaultBillingAddress)) ?>"
-                       class="button button--outline-primary"
+                       class="button button--outline-primary w-full md:w-auto"
                     >
                         <span>
                             <?= $escaper->escapeHtml(__('Change billing address')) ?>
@@ -53,7 +53,7 @@ use Magento\Framework\Escaper;
                 </div>
                 <div>
                     <a href="<?= $escaper->escapeUrl($block->getAddressEditUrl($customerDefaultBillingAddress)) ?>"
-                       class="button button--outline-primary"
+                       class="button button--outline-primary w-full md:w-auto"
                     >
                         <span><?= $escaper->escapeHtml(__('Change shipping address')) ?></span>
                     </a>
