--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
@@ -49,7 +49,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
             <input type="hidden" name="success_url" value="<?= $escaper->escapeUrl($block->getSuccessUrl()) ?>">
             <input type="hidden" name="error_url" value="<?= $escaper->escapeUrl($block->getErrorUrl()) ?>">
 
-            <div class="md:grid grid-cols-2 gap-3">
+            <div class="grid md:grid-cols-2 gap-3">
                 <?= $block->getNameBlockHtml() ?>
 
                 <?php if ($companyBlock->isEnabled()): ?>
@@ -69,11 +69,11 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
         <h2 class="text-text-500 text-lg font-bold mb-5">
             <?= $escaper->escapeHtml(__('Customer Address')) ?>
         </h2>
-        <div class="bg-white p-5 rounded-xl mb-8">
+        <div class="bg-white rounded-xl p-5 mb-5">
             <h2 class="text-text-500 text-lg font-bold mb-5">
                 <?= $escaper->escapeHtml(__('Address')) ?>
             </h2>
-            <div class="md:grid grid-cols-2 gap-3">
+            <div class="grid md:grid-cols-2 gap-3">
                 <div class="flex flex-col gap-3">
 
                     <div>
@@ -320,7 +320,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                 <input type="hidden" name="default_shipping" value="1">
             <?php endif; ?>
         </div>
-        <div class="flex gap-x-4">
+        <div class="flex gap-x-4 flex-col md:flex-row">
             <button type="submit"
                     class="button button--filled-primary"
                     data-action="save-address"
