--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -31,7 +31,7 @@
 
         <!-- Add h-full classes to columns and main -->
         <referenceContainer name="columns" htmlClass="h-full"/>
-        <referenceContainer name="main" htmlClass="h-full"/>
+        <referenceContainer name="main" htmlClass="h-full content-wrapper mx-auto pb-16"/>
 
         <referenceContainer name="header.container" htmlClass="page-header contents"/>
         <referenceContainer name="page.wrapper" htmlClass="flex min-h-screen max-w-screen flex-col bg-bg-500">
