INTERNAL-18: Implement order history list designs

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/title.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/title.phtml
@@ -21,7 +21,7 @@ if (trim((string)$block->getPageHeading())) {
 }
 ?>
 <?php if ($titleHtml): ?>
-    <div class="container mx-auto <?= $escaper->escapeHtmlAttr($titleContainerClasses . $textSizeCssClass) ?>">
+    <div class="hidden md:block container mx-auto <?= $escaper->escapeHtmlAttr($titleContainerClasses . $textSizeCssClass) ?>">
         <h1 class="text-gray-900 page-title title-font"
             <?php if ($block->getId()): ?> id="<?= $escaper->escapeHtmlAttr($block->getId()) ?>" <?php endif; ?>>
             <?= /* @noEscape */ $titleHtml ?>
