--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/history.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/history.phtml
@@ -1,10 +1,4 @@
 <?php
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
@@ -19,9 +13,6 @@ use Magento\Sales\Model\Order;
 /** @var History $block */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
-
-/** @var HeroiconsOutline $heroicons */
-$heroicons = $viewModels->require(HeroiconsOutline::class);
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
@@ -55,39 +46,46 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                 class="grid gap-4 grid-cols-1 md:grid-cols-6"
             >
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold"><?= $escaper->escapeHtml(__('Order #')) ?></div>
+                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Order #')) ?></div>
                     <div><?= $escaper->escapeHtml($order->getRealOrderId()) ?></div>
                 </div>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold"><?= $escaper->escapeHtml(__('Date')) ?></div>
-                    <time datetime="<?= $escaper->escapeHtmlAttr($block->formatDate($date, $format)); ?>">
+                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Date')) ?></div>
+                    <time class="mt-1" datetime="<?= $escaper->escapeHtmlAttr($block->formatDate($date, $format)); ?>">
                         <span aria-hidden="true"><?= $escaper->escapeHtml($block->formatDate($date, $format)); ?></span>
-                        <span class="sr-only"><?= $escaper->escapeHtml($block->formatDate($date, $formatLong)); ?></span>
+                        <span
+                            class="sr-only"><?= $escaper->escapeHtml($block->formatDate($date, $formatLong)); ?></span>
                     </time>
                 </div>
                 <?= $block->getChildHtml('extra.column.header') ?>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold"><?= $escaper->escapeHtml(__('Ship To')) ?></div>
-                    <?= $order->getShippingAddress() ? $escaper->escapeHtml($order->getShippingAddress()->getName()) : '&nbsp;' ?>
+                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Ship To')) ?></div>
+                    <div class="md:mt-1">
+                        <?= $order->getShippingAddress() ? $escaper->escapeHtml($order->getShippingAddress()->getName()) : '&nbsp;' ?>
+                    </div>
                 </div>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold"><?= $escaper->escapeHtml(__('Order Total')) ?></div>
-                    <?= $order->formatPrice($order->getGrandTotal()) ?>
+                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Order Total')) ?></div>
+                    <div class="md:mt-1">
+                        <?= $order->formatPrice($order->getGrandTotal()) ?>
+                    </div>
                 </div>
                 <div class="p-2 flex md:block justify-between">
-                    <div class="font-bold"><?= $escaper->escapeHtml(__('Status')) ?></div>
-                    <?= $escaper->escapeHtml($order->getStatusLabel()) ?>
+                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('Status')) ?></div>
+                    <div class="md:mt-1">
+                        <?= $escaper->escapeHtml($order->getStatusLabel()) ?>
+                    </div>
                 </div>
                 <div class="p-2 md:text-right flex md:block justify-between">
-                    <div class="font-bold"><?= $escaper->escapeHtml(__('View / Reorder')) ?></div>
-                    <div class="flex items-center justify-end gap-4">
+                    <div class="font-bold text-sm"><?= $escaper->escapeHtml(__('View / Reorder')) ?></div>
+                    <div class="flex items-center justify-end gap-4 md:mt-1">
                         <a
                             href="<?= $escaper->escapeUrl($block->getViewUrl($order)) ?>"
                             class="inline-block text-sm underline text-secondary-darker"
                             title="<?= $escaper->escapeHtmlAttr(__('View Order')) ?>"
                             aria-label="<?= $escaper->escapeHtmlAttr(__('View order') . ' ' . ltrim($order->getRealOrderId(), '0')) ?>"
                         >
-                            <?= $hyvaicons->renderHtml('eye', 'w-5 h-5') ?>
+                            <?= $hyvaicons->renderHtml('eye', 'text-xl text-primary-500') ?>
                         </a>
                         <?php if ($this->helper(\Magento\Sales\Helper\Reorder::class)->canReorder($order->getEntityId())): ?>
                             <?php $formData = json_decode(
@@ -111,11 +109,9 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                                     class="inline-block text-sm underline text-secondary-darker"
                                     aria-label="<?= $escaper->escapeHtmlAttr(__('Reorder') . ' ' . ltrim($order->getRealOrderId(), '0')) ?>"
                                 >
-                                    <?= $heroicons->refreshHtml('w-5 h-5', 24, 24, ['aria-hidden' => 'true']) ?>
+                                    <?= $hyvaicons->renderHtml('refresh', 'text-xl text-primary-500') ?>
                                 </button>
                             </form>
-                        <?php else: ?>
-                            <?= $heroicons->refreshHtml('text-gray-300', 24, 24, ['aria-hidden' => 'true']) ?>
                         <?php endif ?>
                         <?php foreach (array_keys($extraActions) as $alias): ?>
                             <?php $button = $block->getLayout()->getChildBlock('order-list-extra-action-buttons', $alias) ?>
